--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,8 @@
         <!-- 增加表单 采用表格布局 -->
         <div class="contact-2">
             <h2>· Message ·</h2>
-            <!-- 表单 -->
-            <form method="post">
+            <!-- 如果此处选用post方法 发布网页后会因为静态页面不允许post请求而报错 -->
+            <form method="get">
                 <div class="tablerow">
                     <p>为我的自我介绍打个分吧！</p>
                     <!-- 单选按钮 使用<input>和<label>元素 -->
